data added to directory

--- a/water/index.html
+++ b/water/index.html
@@ -12,42 +12,21 @@
 </head>
 <body>
     <!-- font-family: 'Raleway', sans-serif; -->
-    <div>
-    <div class="h1">
-    <h1>EVER PURE</h1>
-    </div>
+    <div class="float-start"><h4 class="h4">EVER PURE</h4></div>
     <div class="a1">
-        <a href="" style="text-decoration: none;">HOME</a>&nbsp;
-        <a href="" style="text-decoration: none;">BLOG</a>&nbsp;
-        <a href="" style="text-decoration: none;">PORTFOLIO</a>&nbsp;
-        <!-- <select name="about" id="about">
-        <option value="Page Image Alignment">Page Image Alignment</option>
-        <option value="Page Markup and Formatting">Page Markup and Formatting</option>
-        <option value="Clearing Floats">Clearing Floats</option>
-        <option value="Page with comments">Page with comments</option>
-        <option value="Page with comments disabled">Page with comments disabled</option> -->
-        <a href="" style="text-decoration: none;">ABOUT THE TESTS</a>&nbsp;
-        <!-- </select>
-        <select name="level1" id="level1">
-            <option value="Level2">LEVEL 2</option>
-            <option value="level 2a">LEVEL 2a</option>
-            <option value="level 2b">LEVEL 2b</option> -->
-        <a href="" style="text-decoration: none;">LEVEL1</a>&nbsp;
-        </select>
-        <a href="" style="text-decoration: none;">SHOP</a>&nbsp;
-        <a href="search"></a>
-        <input type="text" placeholder="SEARCH..">
-    </div>
-    <!-- <div class="div1"> -->
-    
-    <!-- </div> -->
-    </div>
+    <div class="float-end "><a href="" style="text-decoration: none;">HOME</a>&nbsp;</div>
+    <div class="float-end"><a href="" style="text-decoration: none;">BLOG</a>&nbsp;</div>
+    <div class="float-end"><a href="" style="text-decoration: none;">PORTFOLIO</a>&nbsp;</div>
+    <div class="float-end"><a href="" style="text-decoration: none;">ABOUTTHETEST</a>&nbsp;</div>
+    <div class="float-end"><a href="" style="text-decoration: none;">LEVEL1</a>&nbsp;</div>
+    <div class="float-end"><a href="" style="text-decoration: none;">SHOP</a>&nbsp;</div>
+    </div> 
     <div class="image1"></div>
     <div class="para">
             <h1>We Change Everything WordPress</h1>
             <p>This is the only WordPress theme you will ever want to use.</p>
-            <button type="button" style="background-color:darkslateblue;">READ MORE</button>
-            <button type="button" class="btn1">DOWNLOAD NOW</button>
+            <button class="b1" type="button" style="background-color:darkslateblue;">READ MORE</button>
+            <button class="b2" type="button">DOWNLOAD NOW</button>
     </div>
     <div style="display: flex;">
         <div class="img1" >
@@ -126,7 +105,7 @@
     </div>
     <div class="gimg10 imgs">
         <img src="IMAGES/grid/10.jpg" alt="mo image" width="300px" height="200px">
-</div>
+    </div>
 </div>
 </div>
 <div class="img5">
@@ -137,11 +116,11 @@
     </div>
 </div>
 <div style="background-color: whitesmoke;">
-    <div class="q1">
+<div class="q1">
 <div style="display: flex;">
     <p>Do you like this awesome WordPress theme?</p>
     <button type="button">DOWNLOAD NOW</button>
-    </div>
+</div>
 </div>
 </div>
 
