data added to directory

--- a/water/index.html
+++ b/water/index.html
@@ -14,66 +14,76 @@
     <!-- font-family: 'Raleway', sans-serif; -->
     <div class="float-start"><h4 class="h4">EVER PURE</h4></div>
     <div class="a1">
-    <div class="float-end "><a href="" style="text-decoration: none;">HOME</a>&nbsp;</div>
-    <div class="float-end"><a href="" style="text-decoration: none;">BLOG</a>&nbsp;</div>
-    <div class="float-end"><a href="" style="text-decoration: none;">PORTFOLIO</a>&nbsp;</div>
-    <div class="float-end"><a href="" style="text-decoration: none;">ABOUTTHETEST</a>&nbsp;</div>
-    <div class="float-end"><a href="" style="text-decoration: none;">LEVEL1</a>&nbsp;</div>
-    <div class="float-end"><a href="" style="text-decoration: none;">SHOP</a>&nbsp;</div>
+    <div class="float-end a"><a href="" style="text-decoration: none;">Home</a>&nbsp;</div>
+    <div class="float-end a"><a href="" style="text-decoration: none;">Blog</a>&nbsp;</div>
+    <div class="float-end a"><a href="" style="text-decoration: none;">Portfolio</a>&nbsp;</div>
+    <div class="float-end a"><a href="" style="text-decoration: none;">About the test</a>&nbsp;</div>
+    <div class="float-end a"><a href="" style="text-decoration: none;">Level 1</a>&nbsp;</div>
+    <div class="float-end a"><a href="" style="text-decoration: none;">Shop</a>&nbsp;</div>
     </div> 
     <div class="image1"></div>
     <div class="para">
             <h1>We Change Everything WordPress</h1>
             <p>This is the only WordPress theme you will ever want to use.</p>
-            <button class="b1" type="button" style="background-color:darkslateblue;">READ MORE</button>
+            <button class="b1" type="button">READ MORE</button>
             <button class="b2" type="button">DOWNLOAD NOW</button>
     </div>
-    <div style="display: flex;">
+<!-- seo friendly -->
+<div class="seo">
         <div class="img1" >
-        <img src="IMAGES/2.png" alt="no image" style="width: 500px; height: 400px;">
-    </div>
+            <img src="IMAGES/2.png" alt="no image">
+        </div>
     <div class="p2">
         <h1>SEO Friendly</h1>
-        <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pulvinar luctus sem, eget porta orci. Maecenas molestie dui id diam feugiat, eu tincidunt mauris aliquam. Duis commodo vitae ligula et interdum. Maecenas faucibus mattis imperdiet. In rhoncus ac ligula id ultricies.</p>
-        <button type="button" style="background-color:darkslateblue;">READ MORE</button>
-    </div>
-</div>
-<div style="background-color:whitesmoke;">
-<div style="display: flex;">
-    <div class="p2">
-        <h1>Portfolio Section</h1>
-        <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pulvinar luctus sem, eget porta orci. Maecenas molestie dui id diam feugiat, eu tincidunt mauris aliquam. Duis commodo vitae ligula et interdum.</p>
-        <button type="button">SEE IT IN ACTION</button>
-    </div>
-    <div class="img2">
-        <img src="IMAGES/3.png" alt="no image" style="width:500px; height: 400px;" >
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pulvinar luctus sem, eget porta orci. Maecenas molestie dui id diam feugiat, eu tincidunt mauris aliquam. Duis commodo vitae ligula et interdum. Maecenas faucibus mattis imperdiet. In rhoncus ac ligula id ultricies.</p>
+        <button class="b1" type="button">READ MORE</button>
     </div>
 </div>
 
+<!-- portfolio -->
+<div class="portfolio">
+        <div class="p2">
+            <h1>Portfolio Section</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pulvinar luctus sem, eget porta orci. Maecenas molestie dui id diam feugiat, eu tincidunt mauris aliquam. Duis commodo vitae ligula et interdum.</p>
+            <button class="b1" type="button">SEE IT IN ACTION</button>
+        </div>
+            <div class="img1">
+                <img src="IMAGES/3.png" alt="no image">
+            </div>
+</div>
+<!-- small paralex -->
 <div class="img3">
-<div class="p3">
-    <h1>Small Parallax Section</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Vivamus imperdiet rhoncus porta. Ut quis sem quis purus bortis   dictum. <br> Aliquam nec dignissim nisl. Vivamus cursus feugiat sapien, eget tincidunt leo ornare quis.</p>
-    <button type="button">MORE INFO</button>
+    <div class="p3">
+        <h1>Small Parallax Section</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Vivamus imperdiet rhoncus porta. Ut quis sem quis purus bortis   dictum. <br> Aliquam nec dignissim nisl. Vivamus cursus feugiat sapien, eget tincidunt leo ornare quis.</p>
+        <button class="b1" type="button">MORE INFO</button>
+    </div>
 </div>
-</div>
+
+<!-- limitless -->
 <div class="p4">
-    <h1 style="color: black;">Limitless Options</h1>
+    <h1>Limitless Options</h1>
     <p>Phasellus sed nisi ac dui interdum semper. Etiam consequat fermentum sollicitudin. Fusce vulputate porta faucibus. 
         <br> Vivamus nulla tellus, accumsan non efficitur id, pretium quis ante</p>
-    <button type="button">DOWNLOAD NOW</button>
+        <div class="btn">
+            <button class="b1" type="button">DOWNLOAD NOW</button>
+        </div>
 </div>
+
+<!-- image -->
 <div class="div1">
-<div class="img4">
-    <img src="IMAGES/5.jpg" alt="no image">
+        <img src="IMAGES/5.jpg" alt="no image">
 </div>
+
+<!-- latest projects -->
+<div class="div2">
+    <div class="p5">
+        <h1>Our Latest Projects</h1>
+        <p>Here is our latest projects. You'll love them!</p>
+    </div>
 </div>
-</div>
-<div class="div2" style="background-color: black;">
-<div class="p5">
-    <h1>Our Latest Projects</h1>
-    <p>Here is our latest projects. You'll love them!</p>
-</div>
+
+<!-- gallery -->
 
 <div class="gallery">
     <div class="gimg1 imgs">
@@ -83,13 +93,13 @@
         <img src="IMAGES/grid/2.jpg" alt="no image" width="300px" height="200px">
     </div>
     <div class="gimg3 imgs">
-        <img src="IMAGES/grid/3.jpg" alt="no image"width="300px" height="200px">
+        <img src="IMAGES/grid/3.jpg" alt="no image" width="300px" height="200px">
     </div>
     <div class="gimg4 imgs">
         <img src="IMAGES/grid/4.jpg" alt="no image" width="300px" height="200px">
     </div>
     <div class="gimg5 imgs">
-        <img src="IMAGES/grid/5.jpg" alt="no image"width="300px" height="200px">
+        <img src="IMAGES/grid/5.jpg" alt="no image" width="300px" height="200px">
     </div>
     <div class="gimg6 imgs">
         <img src="IMAGES/grid/6.jpg" alt="no image" width="300px" height="200px">
@@ -98,7 +108,7 @@
         <img src="IMAGES/grid/7.jpg" alt="no image" width="300px" height="200px">
     </div>
     <div class="gimg8 imgs">
-        <img src="IMAGES/grid/8.jpg" alt="no image"width="300px" height="200px">
+        <img src="IMAGES/grid/8.jpg" alt="no image" width="300px" height="200px">
     </div>
     <div class="gimg9 imgs">
         <img src="IMAGES/grid/9.jpg" alt="no image" width="300px" height="200px">
@@ -107,25 +117,28 @@
         <img src="IMAGES/grid/10.jpg" alt="mo image" width="300px" height="200px">
     </div>
 </div>
-</div>
+
+<!-- customers -->
 <div class="img5">
     <div class="p6">
         <h1>What Our Customers Say</h1>
         <p>Integer ut rutrum nulla, sit amet fringilla nisi. Nam nisl velit, vehicula at nibh sed, porttitor sollicitudin ante. Sed justo augue, vestibulum ut efficitur vitae, euismod et justo. <br>  Mauris sed mattis ante.Ut ligula lectus, consequat vitae neque ac, gravida hendrerit ante.</p>
-        <img src="IMAGES/r.jpg" alt="no image" style="border-image: round; border-radius: 900px;">
+        <img src="IMAGES/r.jpg" alt="no image" class="rimg">
     </div>
 </div>
-<div style="background-color: whitesmoke;">
-<div class="q1">
-<div style="display: flex;">
-    <p>Do you like this awesome WordPress theme?</p>
-    <button type="button">DOWNLOAD NOW</button>
-</div>
-</div>
+
+<!-- theme -->
+<div class="div3">
+    <div class="q1">
+        <p>Do you like this awesome WordPress theme?</p>
+        <div class="button">
+            <button class="b1" type="button">DOWNLOAD NOW</button>
+        </div>
+    </div>
 </div>
 
 <div class="copyright">
     <p>Theme by Colorlib Powered by WordPress</p>
 </div>
-</body>
+</body>    
 </html>
